# digest

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: README.md  test_build_pattern.rs  test_complex_directory.rs  test_complex_patterns.rs  test_gitignore_patterns.rs
src/: lib.rs  main.rs
tests/: README.md  lua_project_tests.rs  mod.rs
tests/ignore_pattern_tests/: mod.rs  pattern_generator.rs
tests/project_detection_tests/: lua_project_tests.rs  mod.rs
