[package]
name = "digest"
version = "0.1.0"
edition = "2021"
description = "A tool to create digests of code repositories for LLM consumption"
authors = ["User"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
ignore = "0.4"
tokei = "12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
similar = "2.2"
regex = "1.9"
